crates/djls-extraction/src/snapshots/djls_extraction__tests__golden_filter_is_safe.snap
---
source: crates/djls-extraction/src/lib.rs
expression: "snapshot(extract_rules(source, \"app.templatetags.filters\"))"
---
tag_rules: {}
filter_arities:
  "app.templatetags.filters::safe_lower":
    expects_arg: false
    arg_optional: false
block_specs: {}
