crates/djls-extraction/src/snapshots/djls_extraction__tests__golden_filter_method_style.snap
---
source: crates/djls-extraction/src/lib.rs
expression: "snapshot(extract_rules(source, \"app.templatetags.filters\"))"
---
tag_rules: {}
filter_arities: {}
block_specs: {}
