crates/djls-extraction/src/snapshots/djls_extraction__tests__golden_filter_no_arg.snap
---
source: crates/djls-extraction/src/lib.rs
expression: "snapshot(extract_rules(source, \"django.template.defaultfilters\"))"
---
tag_rules: {}
filter_arities:
  "django.template.defaultfilters::title":
    expects_arg: false
    arg_optional: false
block_specs: {}
