crates/djls-extraction/src/snapshots/djls_extraction__tests__golden_filter_optional_arg.snap
---
source: crates/djls-extraction/src/lib.rs
expression: "snapshot(extract_rules(source, \"django.template.defaultfilters\"))"
---
tag_rules: {}
filter_arities:
  "django.template.defaultfilters::truncatewords":
    expects_arg: true
    arg_optional: true
block_specs: {}
