crates/djls-extraction/src/snapshots/djls_extraction__tests__golden_filter_required_arg.snap
---
source: crates/djls-extraction/src/lib.rs
expression: "snapshot(extract_rules(source, \"django.template.defaultfilters\"))"
---
tag_rules: {}
filter_arities:
  "django.template.defaultfilters::default":
    expects_arg: true
    arg_optional: false
block_specs: {}
