crates/djls-extraction/src/snapshots/djls_extraction__tests__golden_for_tag_with_empty.snap
---
source: crates/djls-extraction/src/lib.rs
expression: "snapshot(extract_rules(source, \"django.template.defaulttags\"))"
---
tag_rules:
  "django.template.defaulttags::for":
    arg_constraints:
      - Min: 4
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: arg1
        required: true
        kind: Variable
        position: 0
      - name: arg2
        required: true
        kind: Variable
        position: 1
      - name: arg3
        required: true
        kind: Variable
        position: 2
    supports_as_var: false
filter_arities: {}
block_specs:
  "django.template.defaulttags::for":
    end_tag: endfor
    intermediates:
      - empty
    opaque: false
