crates/djls-extraction/src/snapshots/djls_extraction__tests__golden_inclusion_tag.snap
---
source: crates/djls-extraction/src/lib.rs
expression: "snapshot(extract_rules(source, \"app.templatetags.custom\"))"
---
tag_rules:
  "app.templatetags.custom::show_results":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    known_options: ~
    extracted_args:
      - name: poll
        required: true
        kind: Variable
        position: 0
    supports_as_var: false
filter_arities: {}
block_specs: {}
