crates/djls-extraction/src/snapshots/djls_extraction__tests__golden_inclusion_tag_takes_context.snap
---
source: crates/djls-extraction/src/lib.rs
expression: "snapshot(extract_rules(source, \"app.templatetags.custom\"))"
---
tag_rules:
  "app.templatetags.custom::jump_link":
    arg_constraints:
      - Max: 1
    required_keywords: []
    known_options: ~
    extracted_args: []
    supports_as_var: false
filter_arities: {}
block_specs: {}
