crates/djls-extraction/src/snapshots/djls_extraction__tests__golden_inclusion_tag_with_args.snap
---
source: crates/djls-extraction/src/lib.rs
expression: "snapshot(extract_rules(source, \"app.templatetags.nav\"))"
---
tag_rules:
  "app.templatetags.nav::breadcrumbs":
    arg_constraints:
      - Min: 2
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: items
        required: true
        kind: Variable
        position: 0
      - name: separator
        required: false
        kind: Variable
        position: 1
    supports_as_var: false
filter_arities: {}
block_specs: {}
